lib/relevance_grammar.treetop
grammar Relevance
  rule stmt
    i:item op:operator s:stmt {
      def tree
        [i.tree, op.tree, s.tree]
      end
    }
    / item
  end

  rule stmt_parens
    '(' ws s:stmt ws ')' {
      def tree
        s.tree
      end
    }
  end

  rule operator
    ws op:op ws {
      def tree
        op.text_value
      end
    }
  end

  rule item
    identifier {
      def tree
        text_value.to_sym
      end
    }

    / constant

    / stmt_parens
  end

  rule op
    '==' / '!=' / '>=' / '<=' / '>' / '<' / '&&' / '||'
  end

  rule identifier
    [a-zA-Z] [a-zA-Z0-9_\[\]]*
  end

  rule constant
    number {
      def tree
        text_value.to_i
      end
    }

    / string {
      def tree
        text_value
      end
    }
  end

  rule number
    [1-9] [0-9]*
  end
 
  # XXX: Ask the mailing list about this one. :-/
  rule string
    double_quoted_string / single_quoted_string
  end

  rule single_quoted_string
    "'" (!"'" .)* "'" 
  end

  rule double_quoted_string
    '"' (!'"' . / '\"')* '"'
  end

  rule ws
    [\s]*
  end
end
